Bench report: update bench url to point to new UI